# email-scheduler

./: Cargo.toml  readme.md
src/: main.rs
src/api/: api.rs
src/models/: config.rs  message.rs
src/repository/: database.rs
src/services/: email_service.rs
