[package]
name = "email-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
chrono = { version = "0.4.31", features = ["serde"] }
lettre = "0.11.3"
lettre_email = "0.9.4"
serde = { version = "1.0.195", features = ["derive"] }
tokio = "1.35.1"
uuid = { version = "1.6.1", features = ["v4"] }
toml = "0.5"
utoipa = { version = "4", features = ["actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "4", features = ["actix-web"] }